solve card size problem on mobile screen

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  /* box-sizing: border-box; */
 }
 
 body {
@@ -67,6 +67,8 @@ ul li a:hover {
 .image img {
   width: 450px;
   height: 450px;
+  margin-bottom: 80px;
+  margin-right:20px ;
   display: flex;
   border-radius: 80px;
   box-shadow: 4px 4px 10px rgba(0, 0, 0, 0);
